--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ decorator==4.4.2
 defusedxml==0.6.0
 docker-pycreds==0.4.0
 entrypoints==0.3
-fastai==2.2.5
+fastai
 fastcore==1.3.19
 fastprogress==1.0.0
 gitdb==4.0.7
@@ -108,8 +108,6 @@ testpath==0.4.4
 thinc==8.0.1
 threadpoolctl==2.1.0
 tifffile==2021.2.1
-torch==1.8.1+cu102
-torchvision==0.8.2
 tornado==6.1
 tqdm==4.56.2
 traitlets==5.0.5
