--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,6 @@ idna==2.10
 imageio==2.9.0
 ipdb==0.13.4
 ipykernel==5.4.3
-ipython==7.20.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
@@ -53,11 +52,11 @@ nbformat==5.1.2
 nest-asyncio==1.5.1
 networkx==2.5
 notebook==6.2.0
-numpy==1.20.1
+numpy
 opencv-python-headless==4.5.1.48
 packaging==20.9
-pandas==1.2.2
-pandocfilters==1.4.3
+pandas
+pandocfilters
 parso==0.8.1
 pathtools==0.1.2
 pathy==0.4.0
@@ -86,9 +85,9 @@ pyzmq==22.0.3
 qtconsole==5.0.2
 QtPy==1.9.0
 requests==2.25.1
-scikit-image==0.18.1
-scikit-learn==0.24.1
-scipy==1.6.0
+scikit-image
+scikit-learn
+scipy
 Send2Trash==1.5.0
 sentry-sdk==1.0.0
 shortuuid==1.0.1
@@ -107,10 +106,10 @@ terminado==0.9.2
 testpath==0.4.4
 thinc==8.0.1
 threadpoolctl==2.1.0
-tifffile==2021.2.1
+tifffile
 tornado==6.1
 tqdm==4.56.2
-traitlets==5.0.5
+traitlets
 typer==0.3.2
 typing-extensions==3.7.4.3
 urllib3==1.26.3
